--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,34 +1,25 @@
-<!-- <form [formGroup]="loginForm" (ngSubmit)="doLogin(loginForm)" class="myForm" >
-  <h1>Login form</h1>
-  <div class="form-group">
-      Username
-    <input
-      class="form-control"
-      formControlName="username"
-      type="text"
-      placeholder="username"
-    />
-    Password
-    <input formControlName="password" />
-  </div>
-  <button>Login</button>
-</form> -->
 <mat-card class="loginCard">
-    <mat-card-content>
-      <form [formGroup]="loginForm" (ngSubmit)="doLogin(loginForm)" class="myForm">
-        <mat-form-field class="fullWidth">
-          <mat-label>
-            Username:
-          </mat-label>
-          <input matInput type="text" formControlName="username">
-        </mat-form-field>
-        <mat-form-field class="fullWidth">
-          <mat-label>
-            Password:
-          </mat-label>
-          <input matInput type="password" formControlName="password">
-        </mat-form-field>
-        <button mat-button type="submit">Login</button>
-      </form>
-    </mat-card-content>
-  </mat-card>
+  <mat-card-content>
+    <form [formGroup]="loginForm" (ngSubmit)="login(loginForm)" class="myForm">
+      <mat-form-field class="fullWidth">
+        <mat-label>
+          Username:
+        </mat-label>
+        <input matInput type="text" formControlName="username" />
+      </mat-form-field>
+      <mat-form-field class="fullWidth">
+        <mat-label>
+          Password:
+        </mat-label>
+        <input matInput type="password" formControlName="password" />
+      </mat-form-field>
+      <button mat-button type="submit">Login</button>
+      <button
+        mat-button
+        (click)="signup(loginForm.value.username, loginForm.value.password)"
+      >
+        SignUp
+      </button>
+    </form>
+  </mat-card-content>
+</mat-card>
