--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,8 +1,7 @@
 
 .loginCard {
-    width: 400px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 500px;
+    margin: 60px auto;
   }
   
   .myForm{
