add validation and show errors

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,25 +1,39 @@
+<div>
+  <mat-card *ngIf="authService.showError" >
+    <mat-error >
+      {{ authService.errMessage }}
+    </mat-error>
+  </mat-card>
+
 <mat-card class="loginCard">
   <mat-card-content>
     <form [formGroup]="loginForm" (ngSubmit)="login(loginForm)" class="myForm">
       <mat-form-field class="fullWidth">
         <mat-label>
-          Username:
+          Email
         </mat-label>
-        <input matInput type="text" formControlName="username" />
+        <input matInput type="text" formControlName="email" />
+        <mat-error *ngIf="email.value && email.invalid" >Please enter a valid email address!</mat-error>
+        <mat-error *ngIf="!email.value" >Email is required!</mat-error>
       </mat-form-field>
       <mat-form-field class="fullWidth">
         <mat-label>
-          Password:
+          Password
         </mat-label>
         <input matInput type="password" formControlName="password" />
+        <mat-error *ngIf="!password.value" >Password is required!</mat-error>
+        <mat-error *ngIf="password.value && password.invalid" >
+          Password should have 6 characters, at least one uppercase letter, one lowercase letter and one number
+        </mat-error>
       </mat-form-field>
       <button mat-button type="submit">Login</button>
       <button
         mat-button
-        (click)="signup(loginForm.value.username, loginForm.value.password)"
+        (click)="signup(loginForm.value.email, loginForm.value.password)"
       >
         SignUp
       </button>
     </form>
   </mat-card-content>
 </mat-card>
+</div>
